Fix z-index issue for mega menu in Safari

--- a/assets/component-mega-menu.css
+++ b/assets/component-mega-menu.css
@@ -6,7 +6,7 @@
   background-color: rgb(var(--color-background));
   border-left: 0;
   border-radius: 0;
-  border-right: 0;  
+  border-right: 0;
   left: 0;
   overflow-y: auto;
   padding-bottom: 2.4rem;
@@ -32,7 +32,8 @@
 
 .mega-menu[open] .mega-menu__content {
   opacity: 1;
-  transform: translateY(0);
+  transform: translateY(0) translate3d(0,0,0 );
+
 }
 
 .mega-menu__list {
